src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsT-tmF-wfsAN-wmB.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nwant maximized: B\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized-to-edges false\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
