src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsT-tmF-wfsAU-wmAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nwant maximized: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized-to-edges false\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1248 × 688, bounds: 1248 × 688, states: []
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
